NetworkPolicy/knote_blocked.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knote-blocked
spec:
  replicas: 2
  selector:
    matchLabels:
      app: knote-blocked
  template:
    metadata:
      labels:
        app: knote-blocked
    spec:
      containers:
        - name: app-blocked
          image: learnitguide/knotejs:1.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: knote-blocked
spec:
  selector:
    app: knote-blocked

  ports:
    - port: 81
      targetPort: 3000
      nodePort: 30001
  type: NodePort
